.idea/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mon-app-service
spec:
  selector:
    app: mon-app
  ports:
    - protocol: TCP
      port: 80  # Port exposé par le service
      targetPort: 8080  # Port sur lequel votre application écoute
  type: LoadBalancer  # Type de service (NodePort, LoadBalancer, ClusterIP, etc.)
